@@ -363,7 +363,7 @@ static std::vector<std::string> get_script_signature_files()
 
 	// Parse rule files defined on the script level.
 	char* script_signature_files =
-		copy_string(internal_val("signature_files")->AsString()->CheckString());
+		copy_string(zeek::lookup_val("signature_files")->AsString()->CheckString());
 
 	char* tmp = script_signature_files;
 	char* s;
@@ -724,7 +724,7 @@ zeek::detail::SetupResult zeek::detail::setup(int argc, char** argv,
 
 	if ( ! options.pcap_file && ! options.interface )
 		{
-		Val* interfaces_val = internal_val("interfaces");
+		const auto& interfaces_val = zeek::lookup_val("interfaces");
 		if ( interfaces_val )
 			{
 			char* interfaces_str =
