@@ -161,6 +161,9 @@ Deprecated Functionality
 
 - ``internal_type()`` is deprecated, use ``zeek::lookup_type()``.
 
+- ``internal_val()`` and ``internal_const_val()`` are deprecated, use
+  ``zeek::lookup_val()`` or ``zeek::lookup_const()``.
+
 Zeek 3.1.0
 ==========
 
